syntax = "proto3";

option java_package = "com.lama.visitor-management-system";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message VisitorRequest {
  string firstName = 1 ;
  string lastName = 2 ;
  string visitReason = 3 ;
  google.protobuf.Timestamp visitTimeDate = 4 ;
  string mobileNumber = 5 ;
  string hostName = 6 ;
}

message VisitorResponse {
  string confirmationMessage = 1;
}
