syntax = "proto3";

option java_package = "com.lama.visitormanagementsystem";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum HostPosition {
  HR_MANAGER = 0;
  IT_MANAGER = 1;
  CEO = 2;
  ENGINEER = 4;
  OFFICER = 5;
  ANALYST = 6;
  LEGAL = 7;
  ADMIN = 8;
  VP = 9;
  DIRECTOR = 10;
  STAFF = 11;
}
enum VisitReason  {
  JOB_INTERVIEW = 0;
  OUT_SOURCING = 1;
  CLEANING_SERVICE = 2;
  SECURITY_CHECK = 3;
  MEETING = 4;
  HEALTH_CHECK = 5;

}
enum VisitResponse {
  ACCEPTED = 0;
  REJECTED = 1;
}
message VisitorRequest {
  string first_name = 1;
  string last_name = 2;
  google.protobuf.Timestamp visit_time_date = 3;
  string mobile_number = 4;
  VisitReason  visit_reason = 5;
  HostPosition host_position = 6;
}

message VisitorResponse {
  VisitResponse visit_response = 1;
}
